[gd_scene load_steps=5 format=3 uid="uid://y1nkr68pnems"]

[ext_resource type="Script" path="res://scripts/shopItems/diamond_shop.gd" id="1_2cqgi"]
[ext_resource type="Texture2D" uid="uid://dahqtimyr6fwx" path="res://assets/projectiles/DiamondDagger.png" id="1_nfbq1"]
[ext_resource type="FontFile" uid="uid://bv4aoa1310txh" path="res://assets/tilemap/BitPap.ttf" id="2_lu1w0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r2bxe"]
size = Vector2(47, 44)

[node name="diamondShop" type="CharacterBody2D"]
script = ExtResource("1_2cqgi")

[node name="InfoStats" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -122.0
offset_top = -48.0
offset_right = 70.0
offset_bottom = 104.0
scale = Vector2(0.5, 0.5)
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="InfoStats"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -8.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129412, 0.129412, 0.129412, 1)
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="InfoStats/ColorRect"]
layout_mode = 0
offset_left = 64.0
offset_top = 40.0
offset_right = 120.0
offset_bottom = 96.0
texture = ExtResource("1_nfbq1")
metadata/_edit_use_anchors_ = true

[node name="Title" type="Label" parent="InfoStats/ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -87.0
offset_top = 8.0
offset_right = 87.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_lu1w0")
theme_override_font_sizes/font_size = 32
text = "Diamond Dagger"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Description" type="Label" parent="InfoStats/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.62
offset_top = 24.0
offset_right = 161.38
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.65, 0.65)
theme_override_fonts/font = ExtResource("2_lu1w0")
theme_override_font_sizes/font_size = 16
text = "+3 attack, weapon speed slower by %50"
horizontal_alignment = 1

[node name="Flavor" type="Label" parent="InfoStats/ColorRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -86.0
offset_top = -31.94
offset_right = 262.0
offset_bottom = 27.35
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("2_lu1w0")
theme_override_font_sizes/font_size = 16
text = "It's slightly heavier than usual, but by the slightest touch,
you feel a cut through your finger."
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Cost" type="Label" parent="InfoStats/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.619565
anchor_top = 0.888889
anchor_right = 0.625
anchor_bottom = 0.888889
offset_left = 14.0
offset_top = -80.0
offset_right = 89.0
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.615, 0.615)
theme_override_fonts/font = ExtResource("2_lu1w0")
theme_override_font_sizes/font_size = 16
text = "Cost: 22 Gold"
metadata/_edit_use_anchors_ = true

[node name="DiamondDagger" type="Sprite2D" parent="."]
position = Vector2(7, -12)
rotation = 0.523599
scale = Vector2(0.65, 0.65)
texture = ExtResource("1_nfbq1")

[node name="DiamondDagger2" type="Sprite2D" parent="."]
position = Vector2(10, -8)
rotation = 1.0472
scale = Vector2(0.65, 0.65)
texture = ExtResource("1_nfbq1")

[node name="DiamondDagger3" type="Sprite2D" parent="."]
position = Vector2(2, -12)
scale = Vector2(0.65, 0.65)
texture = ExtResource("1_nfbq1")

[node name="diamondArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="diamondArea"]
position = Vector2(2, -6)
shape = SubResource("RectangleShape2D_r2bxe")

[connection signal="body_entered" from="diamondArea" to="." method="_on_diamond_area_body_entered"]
[connection signal="body_exited" from="diamondArea" to="." method="_on_diamond_area_body_exited"]
